<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home"
        />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/title_search"
        />

    <item
        android:id="@+id/navigation_myInterests"
        android:icon="@drawable/ic_baseline_notifications_none_24"
        android:title="@string/Interests"
        />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/title_settings"
        />

</menu>