<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_login">

    <fragment
        android:id="@+id/navigation_login"
        android:name="com.example.doei.ui.login.LoginFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_login" />

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.doei.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.example.doei.ui.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/navigation_myInterests"
        android:name="com.example.doei.ui.myInterests.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_my_interests" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.doei.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>