<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="22dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/custom_input"
        android:backgroundTint="@color/light_gray"
        android:drawableStart="@drawable/custom_email_icon"
        android:drawablePadding="12dp"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:paddingStart="20dp"
        android:paddingEnd="12dp"
        android:selectAllOnFocus="true"
        app:layout_constraintTop_toBottomOf="@id/tvDoei" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/custom_input"
        android:backgroundTint="@color/light_gray"
        android:drawableStart="@drawable/custom_lock_icon"
        android:drawablePadding="12dp"
        android:hint="@string/prompt_password"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:paddingStart="20dp"
        android:paddingEnd="12dp"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="@id/etUsername"
        app:layout_constraintStart_toStartOf="@id/etUsername"
        app:layout_constraintTop_toBottomOf="@+id/etUsername" />

    <Button
        android:id="@+id/btLogin"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_gravity="start"
        android:layout_marginTop="30dp"
        android:background="@drawable/custom_button"
        android:backgroundTint="@color/water_green"
        android:enabled="true"
        android:text="@string/actionLogin"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@id/etPassword"
        app:layout_constraintStart_toStartOf="@id/etPassword"
        app:layout_constraintTop_toBottomOf="@+id/etPassword"
        />

    <Button
        android:id="@+id/btSignin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/create_account"
        android:textAllCaps="false"
        android:background="@drawable/custom_button"
        app:layout_constraintEnd_toEndOf="@+id/btLogin"
        app:layout_constraintStart_toStartOf="@+id/btLogin"
        app:layout_constraintTop_toBottomOf="@+id/btLogin" />


    <TextView
        android:id="@+id/tvDoei"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/app_name"
        android:textColor="@color/water_green"
        android:textSize="55sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>