<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.signIn.SignInFragment">


    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:textColor="@color/dark_water_green"
        />

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="10dp"
        android:background="@drawable/custom_input"
        android:backgroundTint="@color/light_gray"
        android:drawableStart="@drawable/custom_email_icon"
        android:drawablePadding="12dp"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:paddingStart="20dp"
        android:paddingEnd="12dp"
        android:selectAllOnFocus="true"
        />

    <TextView
        android:id="@+id/tvPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/senha"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:textColor="@color/dark_water_green"
        />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="10dp"
        android:background="@drawable/custom_input"
        android:backgroundTint="@color/light_gray"
        android:drawableStart="@drawable/custom_lock_icon"
        android:drawablePadding="12dp"
        android:hint="@string/senha"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:paddingStart="20dp"
        android:paddingEnd="12dp"
        android:selectAllOnFocus="true"/>

    <TextView
        android:id="@+id/tvPasswordConfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm_password"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:textColor="@color/dark_water_green"
        />

    <EditText
        android:id="@+id/etPasswordConfirm"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="10dp"
        android:background="@drawable/custom_input"
        android:backgroundTint="@color/light_gray"
        android:drawableStart="@drawable/custom_lock_icon"
        android:drawablePadding="12dp"
        android:hint="@string/senha"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:paddingStart="20dp"
        android:paddingEnd="12dp"
        android:selectAllOnFocus="true"/>

    <Button
        android:id="@+id/btRegister"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="start"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="10dp"
        android:background="@drawable/custom_button"
        android:backgroundTint="@color/water_green"
        android:enabled="true"
        android:text="@string/register"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        />

</LinearLayout>