<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:layout_margin="8dp"
tools:context=".ui.product_details.ProductDetailsFragment">

<TextView
    android:id="@+id/textview_view_title"
    android:layout_height="wrap_content"
    android:layout_width="wrap_content"
    android:layout_marginTop="16dp"

    android:text="@string/textview_details_title"
    android:textColor="@color/water_green"
    android:textStyle="bold"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.101"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    android:textSize="24sp"/>

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_below="@+id/textview_view_title"

        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_view_title"
        app:layout_constraintBottom_toTopOf="@id/tvPhone">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <ImageView
                android:id="@+id/imageViewDoacao"
                android:layout_width="300dp"
                android:layout_height="300dp"
                tools:src="@drawable/geladeiraimg"
                app:layout_constraintBottom_toTopOf="@+id/textview_categoria_produto"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.494"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"

                app:layout_constraintVertical_bias="0.1" />

            <TextView
                android:id="@+id/textview_categoria_produto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginTop="36dp"
                android:text="@string/textview_categoria_text_default"
                android:textColor="@color/water_green"
                android:textStyle="bold"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.084"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageViewDoacao" />

            <TextView
                android:id="@+id/textView_nome_produto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginTop="8dp"
                android:text="@string/textView_product_name_text"

                android:textSize="20sp"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.105"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textview_categoria_produto" />

            <TextView
                android:id="@+id/textView_local"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                tools:text="6 KM"
                android:textColor="@color/water_green"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/textView_nome_produto"
                app:layout_constraintTop_toBottomOf="@+id/textView_nome_produto"
                app:layout_constraintVertical_bias="0.222" />

            <TextView
                android:id="@+id/textView_detalhes_produto"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:layout_marginEnd="28dp"
                android:layout_marginTop="8dp"
                android:text="@string/textview_detail_default_text"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/textView_local"
                app:layout_constraintTop_toBottomOf="@+id/textView_local"
                app:layout_constraintVertical_bias="0.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/tvPhone"
        app:layout_constraintBottom_toBottomOf="@id/tvPhone"
        app:layout_constraintRight_toLeftOf="@id/tvPhone"
        android:text="@string/contact"
        android:layout_marginEnd="4dp"
        />

    <TextView
        android:id="@+id/tvPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="119999999"
        android:textColor="@color/water_green"
        android:textStyle="bold"
        android:layout_marginEnd="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>